--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -2,6 +2,17 @@
     --surface-color: #fff;
     --curve: 40;
 }
+
+.card-bestseller p{
+    margin-top: 5%;
+    font-size: 48px;
+    font-weight: 700;
+    color: #121212;
+    text-align: center;
+}
+.card-bestseller span{
+    color: #008ecc;
+}
 .cards {
     justify-content: center;
     display: grid;
