--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Itim&display=swap');
 body {
-font-family: 'Caveat Brush', cursive;
+  font-family: 'Caveat Brush', cursive;
   overflow-x: hidden;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #eee;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 p {
 	margin-bottom: 0px;
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: 300;
 	color: #4a4a4a;
 	line-height: 24px;
@@ -34,7 +36,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .section-heading h2 {
-	font-size: 28px;
+	font-size: 36px;
 	font-weight: 400;
 	color: #1e1e1e;
 	margin-bottom: 15px;
@@ -43,13 +45,8 @@ h1,h2,h3,h4,h5,h6 {
 .products-heading {
 	background-image: url(../images/products-heading.jpg);
 }
-
-.about-heading {
-	background-image: url(../images/about-heading.jpg);
-}
-
-.contact-heading {
-	background-image: url(../images/contact-heading.jpg);
+.cart-heading {
+	background-image: url(../images/cart-heading.jpg);
 }
 
 .page-heading {
@@ -62,7 +59,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .page-heading .text-content h4 {
 	color: #008ecc;
-	font-size: 22px;
+	font-size: 32px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 15px;
@@ -200,7 +197,7 @@ header .navbar {
 .navbar .navbar-brand h2 {
 	color: #fff;
 	text-transform: uppercase;
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: 700;
 	transition: all .3s ease 0s;
 }
@@ -219,7 +216,7 @@ header .navbar {
 }
 .navbar .navbar-nav a.nav-link {
 	text-transform: capitalize;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: 500;
 	letter-spacing: 0.5px;
 	color: #fff;
@@ -232,7 +229,7 @@ header .navbar {
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
 	color: #fff;
-	padding-bottom: 25px;
+	padding-bottom: 20px;
 	border-bottom: 3px solid #008ecc;
 }
 .navbar .navbar-toggler-icon {
@@ -249,7 +246,7 @@ header .navbar {
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
 	color: #008ecc;
-	font-size: 18px;
+	font-size: 20px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
 }
@@ -278,15 +275,6 @@ header .navbar {
 	background-repeat: no-repeat;
 	background-position: center center;
 }
-
-.banner-item-03 {
-	padding: 300px 0px;
-	background-image: url(../images/slide_03.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
 .banner .banner-item {
 	max-height: 600px;
 }
@@ -301,7 +289,7 @@ header .navbar {
 
 .banner .text-content h4 {
 	color: #008ecc;
-	font-size: 22px;
+	font-size: 28px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 15px;
@@ -358,7 +346,7 @@ header .navbar {
 	float: right;
 	margin-top: -35px;
 	text-transform: uppercase;
-	font-size: 13px;
+	font-size: 18px;
 	font-weight: 700;
 	color: #008ecc;
 }
@@ -380,7 +368,7 @@ header .navbar {
 }
 
 .product-item .down-content h4 {
-	font-size: 17px;
+	font-size: 18px;
 	color: #1a6692;
 	margin-bottom: 20px;
 	font-family: 'Itim', cursive;
@@ -400,22 +388,12 @@ header .navbar {
 	font-family: 'Itim', cursive;
 }
 
-.product-item .down-content ul li {
-	display: inline-block;
-}
-
-.product-item .down-content ul li i {
-	color: #008ecc;
-	font-size: 14px;
-}
-
-.product-item .down-content span {
+.product-item .down-content i {
 	position: absolute;
 	right: 30px;
-	bottom: 30px;
-	font-size: 13px;
+	bottom: 10px;
+	font-size: 24px;
 	color: #008ecc;
-	font-weight: 500;
 }
 
 /* Footer */
@@ -438,8 +416,6 @@ footer .inner-content p a {
 	color: #008ecc;
 	margin-left: 3px;
 }
-
-
 
 
 /* Product Page */
@@ -487,7 +463,7 @@ footer .inner-content p a {
 	display: inline-block;
 	line-height: 42px;
 	border: 1px solid #eee;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: 700;
 	color: #121212;
 	transition: all .3s;
@@ -536,6 +512,7 @@ footer .inner-content p a {
 	width: 100%; 
 	height: 50px;
 	color: #fff;
+	font-size: 20px;
 }
 
 ::placeholder {
@@ -550,7 +527,7 @@ footer .inner-content p a {
 		margin-left: 5%;
 	}
 	.banner .text-content h4 {
-		font-size: 22px;
+		font-size: 24px;
 	}
 
 	.banner .text-content h2 {
@@ -563,7 +540,7 @@ footer .inner-content p a {
 		padding: 180px 0px;
 	}
 	.page-heading .text-content h4 {
-		font-size: 22px;
+		font-size: 24px;
 	}
 
 	.page-heading .text-content h2 {
