--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ h1,h2,h3,h4,h5,h6 {
 .cart-heading {
 	background-image: url(../images/cart-heading.jpg);
 }
+.product-detail-heading {
+	background-image: url(../images/products-detail-heading.jpg);
+}
 
 .page-heading {
 	padding: 210px 0px 130px 0px;
@@ -101,37 +104,31 @@ h1,h2,h3,h4,h5,h6 {
   width: 10px;
   height: 10px;
   border-radius: 100%;
-  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
   position: absolute;
   opacity: 0;
   width: 50px;
   height: 50px;
-  -webkit-animation: jumper 1s 0s linear infinite;
   animation: jumper 1s 0s linear infinite;
 }
 
 #preloader .jumper > div:nth-child(2) {
-  -webkit-animation-delay: 0.33333s;
   animation-delay: 0.33333s;
 }
 
 #preloader .jumper > div:nth-child(3) {
-  -webkit-animation-delay: 0.66666s;
   animation-delay: 0.66666s;
 }
 
 @-webkit-keyframes jumper {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0);
     transform: scale(0);
   }
   5% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
     opacity: 0;
   }
@@ -140,7 +137,6 @@ h1,h2,h3,h4,h5,h6 {
 @keyframes jumper {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0);
     transform: scale(0);
   }
   5% {
@@ -159,9 +155,6 @@ header {
 	width: 100%;
 	height: 80px;
 	background-color: #232323;
-	-webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s;
 }
 header .navbar {
@@ -302,6 +295,22 @@ header .navbar {
 	letter-spacing: 5px;
 }
 
+.button {
+	border: none;
+	width: 40%;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 18px;
+	margin: 4px 2px;
+	cursor: pointer;
+	margin-left: 30%;
+	border-radius: 24px;
+	font-family: 'Caveat Brush', cursive;
+	background-color: #008ecc;
+}
+
 .owl-banner .owl-dots .owl-dot {
   border-radius: 3px;
 }
@@ -396,6 +405,28 @@ header .navbar {
 	color: #008ecc;
 }
 
+.product-detail{
+	display: flex;
+	margin: 10%;
+	font-family: 'Itim', cursive;
+}
+.product-detail img{
+	width: fit-content;
+}
+.product-detail table,th,td{
+	border-top: black 2px solid;
+	margin-left: 8%;
+	font-size: 18px;
+}
+.product-detail th{
+	width: 10%;
+	vertical-align: top;
+}
+
+.product-detail td{
+	width: 40%;
+	vertical-align: top;
+}
 /* Footer */
 
 footer {
