--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Itim&display=swap');
 body {
-font-family: 'Caveat Brush', cursive;
+  font-family: 'Caveat Brush', cursive;
   overflow-x: hidden;
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #eee;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 p {
 	margin-bottom: 0px;
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: 300;
 	color: #4a4a4a;
 	line-height: 24px;
@@ -34,7 +36,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .section-heading h2 {
-	font-size: 28px;
+	font-size: 36px;
 	font-weight: 400;
 	color: #1e1e1e;
 	margin-bottom: 15px;
@@ -43,13 +45,11 @@ h1,h2,h3,h4,h5,h6 {
 .products-heading {
 	background-image: url(../images/products-heading.jpg);
 }
-
-.about-heading {
-	background-image: url(../images/about-heading.jpg);
+.cart-heading {
+	background-image: url(../images/cart-heading.jpg);
 }
-
-.contact-heading {
-	background-image: url(../images/contact-heading.jpg);
+.product-detail-heading {
+	background-image: url(../images/products-detail-heading.jpg);
 }
 
 .page-heading {
@@ -62,7 +62,7 @@ h1,h2,h3,h4,h5,h6 {
 
 .page-heading .text-content h4 {
 	color: #008ecc;
-	font-size: 22px;
+	font-size: 32px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 15px;
@@ -104,37 +104,31 @@ h1,h2,h3,h4,h5,h6 {
   width: 10px;
   height: 10px;
   border-radius: 100%;
-  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
   position: absolute;
   opacity: 0;
   width: 50px;
   height: 50px;
-  -webkit-animation: jumper 1s 0s linear infinite;
   animation: jumper 1s 0s linear infinite;
 }
 
 #preloader .jumper > div:nth-child(2) {
-  -webkit-animation-delay: 0.33333s;
   animation-delay: 0.33333s;
 }
 
 #preloader .jumper > div:nth-child(3) {
-  -webkit-animation-delay: 0.66666s;
   animation-delay: 0.66666s;
 }
 
 @-webkit-keyframes jumper {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0);
     transform: scale(0);
   }
   5% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: scale(1);
     transform: scale(1);
     opacity: 0;
   }
@@ -143,7 +137,6 @@ h1,h2,h3,h4,h5,h6 {
 @keyframes jumper {
   0% {
     opacity: 0;
-    -webkit-transform: scale(0);
     transform: scale(0);
   }
   5% {
@@ -162,9 +155,6 @@ header {
 	width: 100%;
 	height: 80px;
 	background-color: #232323;
-	-webkit-transition: all 0.3s ease-in-out 0s;
-    -moz-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
     transition: all 0.3s ease-in-out 0s;
 }
 header .navbar {
@@ -200,7 +190,7 @@ header .navbar {
 .navbar .navbar-brand h2 {
 	color: #fff;
 	text-transform: uppercase;
-	font-size: 24px;
+	font-size: 32px;
 	font-weight: 700;
 	transition: all .3s ease 0s;
 }
@@ -219,7 +209,7 @@ header .navbar {
 }
 .navbar .navbar-nav a.nav-link {
 	text-transform: capitalize;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: 500;
 	letter-spacing: 0.5px;
 	color: #fff;
@@ -232,7 +222,7 @@ header .navbar {
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
 	color: #fff;
-	padding-bottom: 25px;
+	padding-bottom: 20px;
 	border-bottom: 3px solid #008ecc;
 }
 .navbar .navbar-toggler-icon {
@@ -249,7 +239,7 @@ header .navbar {
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
 	color: #008ecc;
-	font-size: 18px;
+	font-size: 20px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
 }
@@ -278,15 +268,6 @@ header .navbar {
 	background-repeat: no-repeat;
 	background-position: center center;
 }
-
-.banner-item-03 {
-	padding: 300px 0px;
-	background-image: url(../images/slide_03.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-}
-
 .banner .banner-item {
 	max-height: 600px;
 }
@@ -301,7 +282,7 @@ header .navbar {
 
 .banner .text-content h4 {
 	color: #008ecc;
-	font-size: 22px;
+	font-size: 28px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-bottom: 15px;
@@ -312,6 +293,22 @@ header .navbar {
 	font-size: 62px;
 	text-transform: uppercase;
 	letter-spacing: 5px;
+}
+
+.button {
+	border: none;
+	width: 40%;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 18px;
+	margin: 4px 2px;
+	cursor: pointer;
+	margin-left: 30%;
+	border-radius: 24px;
+	font-family: 'Caveat Brush', cursive;
+	background-color: #008ecc;
 }
 
 .owl-banner .owl-dots .owl-dot {
@@ -358,7 +355,7 @@ header .navbar {
 	float: right;
 	margin-top: -35px;
 	text-transform: uppercase;
-	font-size: 13px;
+	font-size: 18px;
 	font-weight: 700;
 	color: #008ecc;
 }
@@ -380,7 +377,7 @@ header .navbar {
 }
 
 .product-item .down-content h4 {
-	font-size: 17px;
+	font-size: 18px;
 	color: #1a6692;
 	margin-bottom: 20px;
 	font-family: 'Itim', cursive;
@@ -400,24 +397,36 @@ header .navbar {
 	font-family: 'Itim', cursive;
 }
 
-.product-item .down-content ul li {
-	display: inline-block;
-}
-
-.product-item .down-content ul li i {
-	color: #008ecc;
-	font-size: 14px;
-}
-
-.product-item .down-content span {
+.product-item .down-content i {
 	position: absolute;
 	right: 30px;
-	bottom: 30px;
-	font-size: 13px;
+	bottom: 10px;
+	font-size: 24px;
 	color: #008ecc;
-	font-weight: 500;
 }
 
+.product-detail{
+	display: flex;
+	margin: 10%;
+	font-family: 'Itim', cursive;
+}
+.product-detail img{
+	width: fit-content;
+}
+.product-detail table,th,td{
+	border-top: black 2px solid;
+	margin-left: 8%;
+	font-size: 18px;
+}
+.product-detail th{
+	width: 10%;
+	vertical-align: top;
+}
+
+.product-detail td{
+	width: 40%;
+	vertical-align: top;
+}
 /* Footer */
 
 footer {
@@ -438,8 +447,6 @@ footer .inner-content p a {
 	color: #008ecc;
 	margin-left: 3px;
 }
-
-
 
 
 /* Product Page */
@@ -487,7 +494,7 @@ footer .inner-content p a {
 	display: inline-block;
 	line-height: 42px;
 	border: 1px solid #eee;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: 700;
 	color: #121212;
 	transition: all .3s;
@@ -536,6 +543,7 @@ footer .inner-content p a {
 	width: 100%; 
 	height: 50px;
 	color: #fff;
+	font-size: 20px;
 }
 
 ::placeholder {
@@ -550,7 +558,7 @@ footer .inner-content p a {
 		margin-left: 5%;
 	}
 	.banner .text-content h4 {
-		font-size: 22px;
+		font-size: 24px;
 	}
 
 	.banner .text-content h2 {
@@ -563,7 +571,7 @@ footer .inner-content p a {
 		padding: 180px 0px;
 	}
 	.page-heading .text-content h4 {
-		font-size: 22px;
+		font-size: 24px;
 	}
 
 	.page-heading .text-content h2 {
