--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,11 @@ header .navbar {
 .navbar .navbar-nav .nav-item {
 	margin: 0px 15px;
 }
+.navbar .navbar-nav .nav-item i{
+	color: #008ecc;
+	font-size: 24px;
+	margin: 0 15px;
+}
 .navbar .navbar-nav a.nav-link {
 	text-transform: capitalize;
 	font-size: 18px;
@@ -508,49 +513,7 @@ footer .inner-content p a {
 }
 
 
-/*---------------search------------------*/
-.search_box{
-	background: #008ecc;
-	position: relative;
-	padding: 12px;
-	border-radius: 25px;
-	display: flex;
-	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 6%;
-}
 
-.search_box .search_btn{
-	width: 70px;
-	height: 50px;
-	border-radius: 40%;
-	background: #008ecc;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #fff;
-	margin-right: 20px;
-	cursor: pointer;
-}
-
-.search_box .input_search{
-	outline: none;
-	border: 0;
-	background: #008ecc;
-	border-radius: 25px;
-	padding: 15px 20px;
-	width: 100%; 
-	height: 50px;
-	color: #fff;
-	font-size: 20px;
-}
-
-::placeholder {
-  color: #fff;
-}
-
-/*---------------search------------------*/
 /* Responsive Style */
 @media (max-width: 768px) {
 	.banner .text-content {
