--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -35,14 +35,14 @@
    font-family: 'Itim', cursive;
   }
 .submit{
-    margin: 20px 20% 0 36%;
+    margin: 20px 20% 0 28%;
     padding: 12px;
     font-size: 20px;
     background-color: #008ecc;
     border-radius: 16px;
 }
 .return{
-    margin: 20px 0 0 20%;
+    margin: 20px 0 0 24%;
     padding: 12px;
     font-size: 20px;
     background-color: #008ecc;
@@ -85,4 +85,29 @@
 }
 input[type=file]{
     font-size: 20px;
+}
+@media (max-width: 768px) {
+    .field2{
+        margin-top: 120px;
+    }
+    
+    .submit{
+        margin: 20px 0 0 28%;
+    }
+    .return{
+        margin: 20px 0 0 18%;
+    
+  }
+}
+  @media (max-width: 992px){
+    .field2{
+        margin-top: 120px;
+    }
+    
+    .submit{
+        margin: 20px 0 0 28%;
+    }
+    .return{
+        margin: 20px 0 0 18%;
+    }
 }
