--- a/assets/css/sign-style.css
+++ b/assets/css/sign-style.css
@@ -76,7 +76,7 @@ body {
   width: 900px;
   background: #fff;
   margin: 0 auto;
-  box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 16px 16px 0.16px rgba(0, 0, 0, 0.04);
   border-radius: 20px;
   border: 4px solid #1e1e1e; 
 }
@@ -151,7 +151,8 @@ figure {
   font-size: 24px;
   color: #222;
   display: block;
-  text-align: center; }
+  text-align: center; 
+}
 
 .signup-form {
   margin-left: 75px;
