--- a/views/page.ejs
+++ b/views/page.ejs
@@ -58,9 +58,9 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Components</span></a>
+                <a class="nav-link" href="/books">
+                    <i class="fas fa-fw fa-inbox"></i>
+                    <span>Manage Books</span></a>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
@@ -504,7 +504,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span style="color: white;">Copyright &copy; Your Website 2021</span>
                     </div>
                 </div>
             </footer>
