--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,116 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+
+    <meta charset="UTF-8">
+    <title>Status Order</title>
+    <style>
+      .btn{
+        border: solid 3px ;
+        border-radius: 10px;
+        margin-right: 20px;
+      }
+    </style>
+</head>
+<body>
+  <div class="form">
+
+        <% if(data.lenght) { %> 
+            <% for(let i=0;i<data.lenght;i++){ %> 
+    <table style="margin:auto;border:solid black 5px;width:90%;border-radius: 1%;">
+        <tr>
+            
+            <th colspan="4" style="text-align:left;padding:3px;background-color:rgb(0, 174, 255);">
+              <h2>หมายเลขลูกค้า :<%= data[i].user_id %><br>  
+              ชื่อลูกค้า :<%= data[i].user_cusname %> </h2></th>
+        </tr>
+        <% if((data[i].order_details_id) == 0) { %>
+                        <tr><td colspan='7' style='text-align:center'><h1>ไม่มีข้อมูล</h1></td></tr>
+                        <% } %> 
+
+        <tr>
+            <td colspan="4">
+                <table style="border-collapse:collapse;width:100%">
+                    <tr style="background-color:#95f3fa;padding:3px;">
+                        <td style="text-align:left;">
+                            <h3>หลักฐานการชำระเงิน :<%= data[i].payment_image %>  
+                            <br>วันที่ :<%= data[i].order_datestartsend %>  </h3>
+                        </td>
+                        <td style="text-align:right;">
+                            
+                            <h3>สถานะสินค้า : <%= data[i].payment_status %>  
+                            <br> ที่อยู่ :<%= data[i].user_address %> </h3>
+                        </td>
+        </tr>
+        </table>
+				
+            </td>
+        </tr>
+        
+        <tr style="background-color:rgb(192, 232, 255);">
+            <th>รหัสหนังสือ</th>
+            <th>ชื่อหนังสือ</th>
+            <th>ราคาต่อเล่ม</th>
+        </tr>
+        
+           
+                
+        <% if(data2.lenght) { %> 
+            <% for(let i=0;i<data2.lenght;i++){ %> 
+        <tr style="font-size:18px;text-align:center;">
+            <td><%= data2[i].book_id %></td>
+            <td><%= data2[i].book_name %></td>
+            <td><%= data2[i].book_price %></td>
+
+            <% }} %> 
+        </tr>
+        <tr>
+            <td colspan="4">    
+
+                <table style="border-collapse:collapse;width:100%;background-color:#66ffeb">
+                    <tr>
+                        <td style="text-align:left;width:50%;padding-bottom:0px">
+                            <h2>ราคาสุทธิ์:<%= data[i].order_totalprice %></h2>
+                        </td>
+                        <td style="text-align:right;width:50%">
+                            <b>สถานะสินค้า:<%= data[i].payment_status %>  </b>
+                            <h2></h2>
+                        </td>
+                    </tr> 
+                   
+                            <tr style="text-align:center;">
+                                <td colspan="2" style="padding-bottom:10px;">
+                                    <form action="" method="post">
+                            <input type="hidden" name="order" >
+                                        <input class ="btn" id="submit" type="submit" style="padding-left: 9px;
+                                        padding-right: 9px;
+                                        padding-top: 3px;
+                                        padding-bottom: 3px;
+                                        background-color:  rgb(7, 255, 172);" 
+                                        value="จัดส่ง">
+                                      
+                                        <input class ="btn" id="cancle" type="submit" style="padding-left: 5px;
+                                        padding-right: 5px;
+                                        padding-top: 3px;
+                                        padding-bottom: 3px;
+                                        background-color:  rgb(253, 112, 112);"  
+                                        value="Cancle">
+                                        
+                                    </form>
+                                </td>
+                            </tr>
+                </table>
+<% }} %> 
+            </td>
+        </tr>
+        <tr>
+            <td colspan="4"> <br> </td>
+        <tr>
+    </table>
+   
+    </div>
+
+</body>
+
 </html>
