--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,276 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>EveryDay</title>
+    <link rel="icon" href="/images/fd_images/logo-1.png">
+    <!-- Bootstrap core CSS -->
+    <link href="/stylesheets/FrontEnd/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="/stylesheets/FrontEnd/assets/css/fontawesome.css">
+    <link rel="stylesheet" href="/stylesheets/FrontEnd/assets/css/style.css">
+    <link rel="stylesheet" href="/stylesheets/FrontEnd/assets/css/owl.css">
+    <link rel="stylesheet" href="/stylesheets/FrontEnd/assets/css/card.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
   </head>
+
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+    <!-- ***** Preloader Start ***** -->
+    <div id="preloader">
+        <div class="jumper">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>  
+    <!-- ***** Preloader End ***** -->
+
+    <!-- Header -->
+    <header class="">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"><h2>every<em>day</em></h2></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Home
+                  <span class="sr-only">(current)</span>
+                </a>
+              </li> 
+              <li class="nav-item">
+                <a class="nav-link" href="products.html">Our Products</a>
+              </li>
+              <li class="nav-item sub-menus">
+                <a class="nav-link" href="login.html">Log In</a>
+                <ul>
+                    <li><a href="profile.html"><i class="fa fa-edit"></i> Edit Profile</a></li>
+                    <li><a href="status.html"><i class="fa fa-clipboard"></i> Check status</a></li>
+                    <li><a href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link" href="#">Status</a>
+              </li> -->
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Page Content -->
+    <!-- Banner Starts Here -->
+    <div class="banner header-text">
+      <div class="owl-banner owl-carousel">
+        <div class="banner-item-01">
+          <div class="text-content">
+            <h4>Best Offer</h4>
+            <h2>New Arrivals On Sale</h2>
+          </div>
+        </div>
+        <div class="banner-item-02">
+          <div class="text-content">
+            <h4>Flash Deals</h4>
+            <h2>Get your best products</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Banner Ends Here -->
+
+    <!--start card-->
+    <div class="card-bestseller">
+      <p><span>BEST</span> SELLER</p>
+    </div>
+      <ul class="cards">
+          <li>
+              <a href="#" class="card">
+                  <img src="/images/fd_images/product_02.jpg" class="card__image">
+                  <div class="card__overlay">
+                      <div class="card__header">
+                          <div class="card__header-text">
+                              <h1>Witchoar (วิชชอร์) 2</h1>
+                          </div>
+                      </div>
+                      <p>
+                        หลังได้บรรจุเป็นพนักงานของร้าน
+                        เจย์ต้องลงแข่งขันในไลต์ก็อดเฟสติวัล ตามธรรมเนียมผู้เริ่มต้นฝึกฝนในศาสตร์กัลดราบก
+                        และรางวัลใหญ่ของการแข่งครั้งนี้ไม่ธรรมดา เพราะมันคือสิทธิ์เข้าทำงานในวิทาเรียทีรูม
+                        ซึ่งเจย์จะต้องเสียมันไป หากพ่ายแพ้ในการแข่ง
+                        
+                        ท่ามกลางความกดดันทั้งหลาย พวกฮอปกินส์ก็ออกล่าตัวเจย์อีกครั้ง
+                        หนนี้พวกนั้นไม่สนใจว่าจะได้ตัวเจย์ที่ยังมีลมหายใจหรือไม่
+                        เพราะพวกเขาต้องการแม้เหลือเพียงวิญญาณ!</p>
+                  </div>
+              </a>
+          </li>
+          <li>
+            <a href="#" class="card">
+                <img src="/images/fd_images/product_03.jpg" class="card__image">
+                <div class="card__overlay">
+                    <div class="card__header">
+                        <div class="card__header-text">
+                            <h1>Witchoar (วิชชอร์) 3</h1>
+                        </div>
+                    </div>
+                    <p>
+                      ความลับของซิมป์สัน ศาสตร์อัญเชิญปีศาจ เเละ Trick or Treat!
+                  เหล่ามาสเตอร์ต้องประหลาดใจอีกครั้ง
+                  เมื่อเจย์ครอบครอง อัสโมว จิตวิญญาณของเถ้ากระดูกที่บ่งชี้ว่าเขาคือ สปิริเชียล พ่อมดผู้ควบคุมปีศาจ
+                  เเน่นอน มันนำปัญหามาให้เจย์ พอๆ กับที่ช่วยคลายปมปริศนา หนึ่งในนั้นคือ การเผชิญหน้านักสะสมปีศาจมากเล่ห์อย่าง ชาร์ม ซิมป์สัน
+                  การฟื้นความรู้ศาสตร์เวทย์มนตร์ว่ายากเเล้ว เเต่การรับมือกับซิมป์สันหลายคนพร้อมกันอาจยากยิ่งกว่า!</p>
+                </div>
+            </a>
+        </li>
+        <li>
+          <a href="#" class="card">
+              <img src="/images/fd_images/product_05.jpg" class="card__image">
+              <div class="card__overlay">
+                  <div class="card__header">
+                      <div class="card__header-text">
+                          <h1>Witchoar (วิชชอร์) 5</h1>
+                      </div>
+                  </div>
+                  <p>
+                    จดหมายจากเจย์คนก่อน หอลืมชาติ และแซมป์สันเพราะระดับของพ่อมดในโลกเวทมนตร์และได้กับค่าลดหย่อนภาษีธุรกิจ
+                    เจย์จึงต้องเดินทางไปเข้าทดสอบเมจิกลอสต์ พร้อมกับพนักงานคนอื่นของวิทาเรียทีรูม แต่การประเมินครั้งนี้ไม่ธรรมดา เพราะเมืองที่จัดการทดสอบคือ 
+                    มาเจนต้า สถานที่เกิดเหตุการณ์ร้ายในความทรงจำของโซอี้ท่ามกลางปัญหาที่ประดังเข้ามา ความช่วยเหลือก็มาถึงเเละครั้งนี้มันมาจากมือของ แมทธิว ฮอปกินส์</p>
+              </div>
+          </a>
+      </li>
+      </ul>
+  </section>
+    <!--end card-->
+    <div class="latest-products">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-heading">
+              <h2>Latest Products</h2>
+              <a href="products.html">view all products <i class="fa fa-angle-right"></i></a>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="product-detail.html"><img src="/images/fd_images/product_01.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 1 : หยดน้ำแห่งกัลดราบก</h4></a>
+                <h6>220.00 บาท</h6>
+                <p>เจย์ สก็อต ตื่นมาพร้อมกับความทรงจำที่ว่างเปล่า เขาไม่รู้อะไรเลยเกี่ยวกับตัวเอง ทั้งเรื่องในอดีตและ
+                  สิ่งที่ต้องทำต่อไปในอนาคต โดยเฉพาะทำไมเขาถึงมีพลังที่น่าจะเป็น ‘เวทมนตร์’ ชายหนุ่มอาศัยข้อความในสมุด
+                  บันทึกทบทวนตัวตนในอดีต และกระดาษเตือนความจำที่จดไว้ทำให้เขาต้องเดินทางไปเริ่มชีวิตใหม่ที่เมืองวิชชอร์
+                  เป็นพนักงานในร้านน้ำชาชื่อ วิทาเรียทีรูม
+                  แต่ชีวิตใหม่ที่น่าจะเรียบง่าย กลับไม่สงบอย่างที่คิด ...</p>
+                  <i class="fa fa-cart-plus"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="/images/fd_images/product_02.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 2 : เปลวไฟแห่งเนโคร</h4></a>
+                <h6>350.00 บาท</h6>
+                <p>
+                  หลังได้บรรจุเป็นพนักงานของร้าน
+                  เจย์ต้องลงแข่งขันในไลต์ก็อดเฟสติวัล ตามธรรมเนียมผู้เริ่มต้นฝึกฝนในศาสตร์กัลดราบก
+                  และรางวัลใหญ่ของการแข่งครั้งนี้ไม่ธรรมดา เพราะมันคือสิทธิ์เข้าทำงานในวิทาเรียทีรูม
+                  ซึ่งเจย์จะต้องเสียมันไป หากพ่ายแพ้ในการแข่ง
+                  ท่ามกลางความกดดันทั้งหลาย พวกฮอปกินส์ก็ออกล่าตัวเจย์อีกครั้ง
+                  หนนี้พวกนั้นไม่สนใจว่าจะได้ตัวเจย์ที่ยังมีลมหายใจหรือไม่
+                  เพราะพวกเขาต้องการแม้เหลือเพียงวิญญาณ!</p>
+                  <i class="fa fa-cart-plus"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="/images/fd_images/product_04.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 4 : ใบชาแห่งอัลฮาคิม</h4></a>
+                <h6>310.00 บาท</h6>
+                <p>ผู้หญิงของซิมป์สัน เด็กใหม่
+                  และความลับของ เจย์ สก็อต
+                  เจย์ต้องเข้ารับการทดสอบสมรรถภาพ
+                  เพื่อขึ้นทะเบียนพ่อมดตามกฏโลกเวทมนตร์
+                  แต่ในเมื่อใครๆ ต่างก็อยากรู้เรื่องของเขา
+                  การทดสอบที่ไม่ธรรมดาหนนี้
+                  จึงเป็นโอกาสของทั้งสภากลาง ผู้ประเมิน
+                  รวมถึงหัวหน้ามาสเตอร์แห่งร้านวิทาเรียทีรูมที่จะล้วงมันออกมา
+                  ขณะที่ปริศนาของเจย์เริ่มคลี่คลาย
+                  ฮอปกินส์ก็เริ่มเคลื่อนไหว และครั้งนี้อาจต้องปะทะกับเหล่าซิมป์สัน!</p>
+                  <i class="fa fa-cart-plus"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="/images/fd_images/product_06.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>ครอบครัวตึ๋งหนืดตะลุยวิทย์ </h4><h4>ตอน ไดโนเสาร์สมองกล (ฉบับการ์ตูน)</h4></a>
+                <h6>150.00 บาท</h6>
+                <p>
+                  "โทรุ"  "ฮารุ" และ "จอห์น" ได้เข้าไปผจญภัยในไดโนพาร์ก สวนสนุกโลกล้านปีที่เต็มไปด้วยหุ่นยนต์ไดโนเสาร์สุดเท่ 
+                  แต่ไดโนเสาร์เหล่านี้มีพฤติกรรมแปลก ๆ เพราะมีคนไปดัดแปลงโปรแกรมเข้า 
+                  "ดร.วัน" จึงต้องขอความช่วยเหลือจากเด็ก ๆ ทั้งสาม เพื่อช่วยแก้ไขโคดดิ้ง ทำให้หุ่นยนต์ไดโนเสาร์กลับมาเป็นเหมือนเดิมให้ได้!</p>
+                  <i class="fa fa-cart-plus"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="product-item">
+              <a href="#"><img src="/images/fd_images/product_07.jpg" alt=""></a>
+              <div class="down-content">
+                <a href="#"><h4>Why?</h4><h4>ความปลอดภัยในชีวิตประจำวัน (ฉบับการ์ตูน)</h4></a>
+                <h6>159.00 บาท</h6>
+                <p>
+                  "เซพี" พ่อมดน้อยแห่งโรงเรียนแห่งเวทมนตร์ ตั้งใจจะเสกเมล็ดพันธุ์โชคดี แต่ดันทำพลาดเสกเมล็ดพันธุ์สุดอันตรายขึ้นมา 
+                  และเมล็ดพันธุ์นี้เผอิญไปติดผมเด็กสาวผู้ร่าเริง เฟียนา ทำให้เธอเสี่ยงประสบอุบัติเหตุต่อเนื่อง 15 วัน เซพีและเซฟเพื่อนร่วมห้องที่แอบชอบเธอ
+                  จึงต้องพยายามทุกวิถีทางช่วยเฟียนาจากอุบัติเหตุรอบตัวต่าง ๆ มากมาย มาดูกันว่าทั้งคู่ จะช่วยเฟียนาจากสารพัดอันตรายสำเร็จหรือไม่!</p>
+                  <i class="fa fa-cart-plus"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="inner-content">
+              <p>EveryDay BY My team</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="/javascripts/fd_js/jquery.min.js"></script>
+    <script src="/javascripts/fd_js/bootstrap.bundle.min.js"></script>
+
+
+    <!-- Additional Scripts -->
+    <script src="/javascripts/fd_js/custom.js"></script>
+    <script src="/javascripts/fd_js/owl.js"></script>
+
   </body>
+
 </html>
