--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,30 +36,30 @@
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>every<em>day</em></h2></a>
+          <a class="navbar-brand" href="/"><h2>every<em>day</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home
+                <a class="nav-link" href="/">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Our Products</a>
+                <a class="nav-link" href="/products">Our Products</a>
               </li>
               <li class="nav-item sub-menus">
-                <a class="nav-link" href="login.html">Log In</a>
+                <a class="nav-link" href="/login">Log In</a>
                 <ul>
-                    <li><a href="profile.html"><i class="fa fa-edit"></i> Edit Profile</a></li>
-                    <li><a href="status.html"><i class="fa fa-clipboard"></i> Check status</a></li>
+                    <li><a href="/profile"><i class="fa fa-edit"></i> Edit Profile</a></li>
+                    <li><a href="/status"><i class="fa fa-clipboard"></i> Check status</a></li>
                     <li><a href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart"></i></a>
+                <a class="nav-link" href="/cart"><i class="fa fa-shopping-cart"></i></a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Status</a>
@@ -159,12 +159,12 @@
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Latest Products</h2>
-              <a href="products.html">view all products <i class="fa fa-angle-right"></i></a>
+              <a href="/products">view all products <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="product-detail.html"><img src="/images/fd_images/product_01.jpg" alt=""></a>
+              <a href="/product-detail"><img src="/images/fd_images/product_01.jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Witchoar (วิชชอร์) </h4><h4>เล่ม 1 : หยดน้ำแห่งกัลดราบก</h4></a>
                 <h6>220.00 บาท</h6>
