--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,111 +1,51 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Login Admin</title>
-		<style>
-		#form-messages {
-        	background-color: rgb(255, 232, 232);
-        	border: 1px solid red;
-        	color: red;
-        	display: none;
-        	font-size: 12px;
-        	font-weight: bold;
-        	margin-bottom: 10px;
-        	padding: 10px 25px;
-        	max-width: 250px;
-    	}
-		.form {
-			width: 300px;
-			margin: 0 auto;
-			font-family: Tahoma, Geneva, sans-serif;
-		}
-		.form h1 {
-			text-align: center;
-			color: #4d4d4d;
-			font-size: 24px;
-			padding: 20px 0 20px 0;
-		}
-		.form input[type="password"],
-		.form input[type="text"] {
-			width: 100%;
-			padding: 15px;
-			border: 1px solid #dddddd;
-			margin-bottom: 15px;
-			box-sizing:border-box;
-		}
-		.form input[type="submit"] {
-			width: 100%;
-			padding: 15px;
-			background-color: #535b63;
-			border: 0;
-			box-sizing: border-box;
-			cursor: pointer;
-			font-weight: bold;
-			color: #ffffff;
-		}
-		
-		</style>
-	</head>
-	<body>
-		<div class="form">
-			<h1>เข้าสู่ระบบจัดการแอดมิน Everyday</h1>
-			<ul id="form-messages">
-				<li id="form-messages-error"></li>
-				<!-- <li>username and password is wrong</li> -->
-			</ul>
-	
-			<input type="text" name="username" id="username" placeholder= "Username" required>
-			<input type="password" name="password" id="password"  placeholder="Password" required>
-			<input id="btn-submit" type="submit">
-			
-		</div>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>EveryDay Login</title>
+    <link rel="icon" href="/images/fd_images/logo-1.png">
 
-	<script>
-        const form = {
-            username: document.getElementById('username'),
-            password: document.getElementById('password'),
-            submit: document.getElementById('btn-submit'),
-            messages: document.getElementById('form-messages')
-        };
-		// console.log(form);
-        form.submit.addEventListener('click', () => {
-            const request = new XMLHttpRequest();
+    <!-- Main css -->
+    <link rel="stylesheet" href="/stylesheets/FrontEnd/assets/css/sign-style.css">
+</head>
+<body>
 
-            request.onload = () => {
-                let responseObject = null;
+    <div class="main">
+        <!-- Sing in  Form -->
+        <section class="sign-in">
+            <div class="container">
+                <div class="signin-content">
+                    <div class="signin-image">
+                        <figure><img src="/images/fd_images/logo-2.png" alt="sing up image"></figure>
+                        <a href="/signup" class="signup-image-link">Create an account</a>
+                    </div>
+                    <div class="signin-form">
+                        <h2 class="form-title">Log In</h2>
+                        <form method="POST" class="register-form" id="login-form">
+                            <div class="form-group">
+                                <input type="text" name="your_name" id="your_name" placeholder="Your Name" required/>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" name="your_pass" id="your_pass" placeholder="Password" required/>
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
+                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
+                            </div>
+                            <div class="form-group form-button">
+                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log In"/>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 
-                try {
-                    responseObject = JSON.parse(request.responseText);
-                } catch (e) {
-                    console.error('Could not parse JSON!');
-                }
-
-                if (responseObject) {
-                    handleResponse(responseObject);
-                }
-            };
-
-            const requestData = `username=${form.username.value}&password=${form.password.value}`;
-
-            request.open('post', '/api/admin/login');
-            request.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-            request.send(requestData);
-			// console.log(requestData);
-        });
-
-        function handleResponse (responseObject) {
-			// console.log(responseObject);
-			
-            if (responseObject.status == 200) {
-                location.href = '/dashboard';
-            } else {
-				document.getElementById("form-messages").style.display = "block";
-				document.getElementById("form-messages-error").textContent = responseObject.message;
-            }
-        }
-    </script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- JS -->
+    <script src="/javascripts/fd_js/sign-jquery.min.js"></script>
+    <script src="/javascripts/fd_js/sign-main.js"></script>
+</body>
 </html>
