--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,7 @@
 
     <!-- Main css -->
     <link rel="stylesheet" href="/stylesheets/FrontEnd/assets/css/sign-style.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
 </head>
 <body>
 
@@ -48,4 +49,7 @@
     <script src="/javascripts/fd_js/sign-jquery.min.js"></script>
     <script src="/javascripts/fd_js/sign-main.js"></script>
 </body>
+<script>
+    
+</script>
 </html>
