--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -46,6 +46,7 @@
 		}
 		
 		</style>
+		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 	</head>
 	<body>
 		<div class="form">
@@ -63,6 +64,7 @@
 	</body>
 
 	<script>
+
         const form = {
             username: document.getElementById('username'),
             password: document.getElementById('password'),
