[u] user login, register cookie

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,15 +25,15 @@
                     <div class="signin-form">
                         <h2 class="form-title">Log In</h2>
 
-                        <form onsubmit="login()" id="loginform" name="loginform">
+                        <form method="POST" action="/api/user/login">
                             <div class="form-group">
-                                <input type="text" name="your_name" id="your_name" placeholder="Your Name" required/>
+                                <input type="text" name="username" id="your_name" placeholder="Your Name" required/>
                             </div>
                             <div class="form-group">
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Password" required/>
+                                <input type="password" name="password" id="your_pass" placeholder="Password" required/>
                             </div>
                             <div class="form-group">
-                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
+                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" disabled/>
                                 <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                             </div>
                             <div class="form-group form-button">
@@ -50,45 +50,46 @@
     <!-- JS -->
     <script src="/javascripts/fd_js/sign-jquery.min.js"></script>
     <script src="/javascripts/fd_js/sign-main.js"></script>
-    <script src="/javascripts/FetchFunction.js"></script>
 </body>
 <script>
+
+
     // FPost('http://localhost:3000/',{answer: 42})
     //     .then(data => {
     //         console.log(data);
     //     })
 
-    async function login(){
-        let fd = new FormData();
+    // async function login(){
+    //     let fd = new FormData();
 
-        console.log("hello")
-        let username = document.getElementById('your_name').value;
-        // let password = document.getElementById('your_pass').value;
+    //     console.log("hello")
+    //     let username = document.getElementById('your_name').value;
+    //     // let password = document.getElementById('your_pass').value;
 
-        fd.append('username', username);
-        // fd.append('password', password);
+    //     fd.append('username', username);
+    //     // fd.append('password', password);
 
-        // console.log(fd);
-        // console.log(Array.from(fd));
-        JSON.stringify(fd)
+    //     // console.log(fd);
+    //     // console.log(Array.from(fd));
+    //     JSON.stringify(fd)
 
-        await senddata(fd)
-    }
+    //     await senddata(fd)
+    // }
 
-    function senddata(x) {
-        console.log(Array.from(x));
-        fetch('http://localhost:3000/',{
-            method: 'post',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({
-                'username': "name",
-                'data': x
-            })
-        })
-        .then(response => console.log(response))
-        .catch(err => console.log(err))
-    }
+    // function senddata(x) {
+    //     console.log(Array.from(x));
+    //     fetch('http://localhost:3000/',{
+    //         method: 'post',
+    //         headers: {
+    //             'Content-Type': 'application/json'
+    //         },
+    //         body: JSON.stringify({
+    //             'username': "name",
+    //             'data': x
+    //         })
+    //     })
+    //     .then(response => console.log(response))
+    //     .catch(err => console.log(err))
+    // }
 </script>
 </html>`
