--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,7 @@
                 <div class="signup-content">
                     <div class="signup-form">
                         <h2 class="form-title">Sign up</h2>
-                        <form method="POST" class="register-form" id="register-form">
+                        <form method="POST" class="register-form" id="register-form" action="/api/user/sign-up">
                             <div class="form-group">
                                 <input type="text" name="name" id="name" placeholder="Your Name" required/>
                             </div>
